<resources>
    <string name="app_name">VideoToServer</string>
    <string name="action_settings_server">Settings Server</string>
    <string name="action_settings_button">Settings Buttons</string>
    <string name="input">target URL</string>
    <string name="status_text">statustext</string>
    <string name="button_open_url">Button Open URL</string>
    <string name="left_mouse_button">Left mouse Button</string>
    <string name="middle_mouse_button">Middle mouse Button</string>
    <string name="right_mouse_button">Right mouse Button</string>
    <string name="status_connecting">Connecting to %1$s</string>
    <string name="status_connected">Connected to %1$s</string>
    <string name="status_not_connected">Not connected</string>
    <string name="addServer">Add new Server</string>
    <string name="addServerDetails">Add the connection details of a new server</string>
    <string name="availableServers">Available server</string>
    <string name="selectServers">Select existing server to control</string>
    <string name="MainSettingName">Main Settings</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="serverName">Server Name</string>
    <string name="serverIP">Server IP</string>
    <string name="username">user name</string>
    <string name="displayId">Display ID</string>
    <string name="usePassword">use Password</string>
    <string name="privateKeyFile">private Key File</string>
    <string name="generateKey">generate new private key</string>
    <string name="chooseFile">choose File</string>
    <string name="generalServerInfo">General data</string>
    <string name="passphrase">passphrase</string>
    <string name="Credentials">Login</string>
    <string name="KnownHosts">Known Host</string>
    <string name="TestConnection">Test Connection</string>
    <string name="password">password</string>
    <string name="SaveServer">Save new Server</string>
    <string name="serverPort">Port</string>
    <string name="NoServerConnected">No server connected</string>
    <string name="button_reconnect">connect to Server</string>
    <string name="errorConnecting">Error connecting</string>
    <string name="readyToConnect">ready to connect</string>
    <string name="NoConnectionConfigAvailable">There is no Server configured</string>
    <string name="CopyPublicKey">Copy Public Key</string>
    <string name="GenerateNewKey">Generate new Key Pair</string>
    <string name="UseExternalStorage">Store files external</string>
    <string name="ErrorNoKeyGeneratedYet">No file generated yet</string>
    <string name="PublicKey">Public Key</string>
    <string name="ErrorReadingKeyFile">Error reading key file.</string>
    <string name="KeyGenerated">Key generated. Fingerprint is:</string>
    <string name="SendPublicKey">Share public Key</string>
    <string name="share">share</string>
    <string name="AuthMethod">Authentication Method</string>
    <string name="ServerUser">Username for Server</string>
    <string name="currentServer">Currently Selected Server</string>
    <string name="connect">Connect</string>
    <string name="chooseServer">Choose Server</string>
    <string name="change_image">Change Image</string>
    <string name="command">Command</string>
    <string name="needs_gui">Needs Display</string>
    <string name="saveChanges">Save Changes</string>

</resources>
