<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/currentServer"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold"/>

    <LinearLayout
        style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="@string/serverName" />
        <TextView
            style="@style/FormText" />
    </LinearLayout>

    <LinearLayout style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="@string/serverIP" />
        <TextView style="@style/FormText" />
    </LinearLayout>

    <LinearLayout style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="@string/ServerUser" />
        <TextView
            style="@style/FormText" />
    </LinearLayout>

    <LinearLayout style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="@string/AuthMethod" />
        <TextView
            style="@style/FormText" />
    </LinearLayout>
</merge>