<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"  >
    <Spinner
        android:id="@+id/KeyTypesListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/keytypes" />
    <Switch
        android:id="@+id/ExternalInternalSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UseExternalStorage"/>
    <EditText
        android:id="@+id/GenKeyPassphrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/passphrase"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">
        <Button
            android:id="@+id/GenerateKey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".3"
            android:text="@string/GenerateNewKey" />
        <ProgressBar
            android:id="@+id/GenerateKeyProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:visibility="invisible" />
    </LinearLayout>
    <TextView
        android:id="@+id/AddServerTestStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/CopyPublicKeyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/CopyPublicKey" />
    <Button
        android:id="@+id/SendPublicKeyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/SendPublicKey" />

</LinearLayout>