<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#DCDCDC"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingTop="15dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/buttonCurrentImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/monitor_down_24dp" />

        <Button
            android:id="@+id/buttonChangeImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_image" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/command" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/needs_gui" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingTop="15dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/buttonSaveChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saveChanges" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>