<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/StatusText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="8dp"
        android:textSize="@dimen/font_size_small"
        android:ems="10"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/StatusProgress"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/StatusProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/StatusText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/StatusText"
        app:layout_constraintVertical_bias="0.0" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonGoto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatusText">

        <AutoCompleteTextView
            android:id="@+id/inputUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text=""
            android:hint="@string/input" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/buttonGoto"
        style="?android:buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_button"
        android:paddingBottom="5dp"
        android:src="@drawable/ic_send_black_24dp"
        android:contentDescription="@string/button_open_url"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.416" />

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/touchfield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>

    <com.groth.android.videotoserver.views.touchfield.TouchfieldView
        android:id="@+id/touchfield"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/leftMouseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBar" />

    <Button
        android:id="@+id/leftMouseButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/left_mouse_button"
        app:layout_constraintBottom_toTopOf="@+id/favouritesRecycler"
        app:layout_constraintEnd_toStartOf="@+id/middleMouseButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/middleMouseButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/middle_mouse_button"
        app:layout_constraintBottom_toBottomOf="@+id/leftMouseButton"
        app:layout_constraintEnd_toStartOf="@+id/rightMouseButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/leftMouseButton"
        app:layout_constraintTop_toTopOf="@+id/leftMouseButton"
        app:layout_constraintVertical_bias="0.533" />


    <Button
        android:id="@+id/rightMouseButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/right_mouse_button"
        app:layout_constraintBottom_toBottomOf="@+id/middleMouseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/middleMouseButton"
        app:layout_constraintTop_toTopOf="@+id/middleMouseButton"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favouritesRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>